Submitting reviewed version of notebook 08.

--- a/08-ferramentas-funcionais.ipynb
+++ b/08-ferramentas-funcionais.ipynb
@@ -7,9 +7,9 @@
     "Ferramentas funcionais\n",
     "================\n",
     "\n",
-    "A Python fornece alguns comandos predefinidos, tais como `map`, `filter`, `reduce`, bem como `lambda` (para criar funções anônimas) e compreensão de lista. Estes são comandos típicos de linguagens funcionais das quais LISP provavelmente é a mais conhecida.\n",
+    "A linguagem Python fornece alguns comandos predefinidos, tais como `map`, `filter`, `reduce`, bem como `lambda` (para criar funções anônimas) e compreensões de lista. Tais comandos são típicos de linguagens funcionais, das quais LISP provavelmente é a mais conhecida.\n",
     "\n",
-    "A programação funcional pode ser extremamente poderosa e um dos pontos fortes da Python é que permite programar usando (i) estilo de programação procedural (ou imperativa), (ii) estilo orientado a objetos e (iii) estilo funcional. São os  programadores quem escolhem quais ferramentas selecionar, de qual estilo e como misturá-los para resolver melhor um determinado problema.\n",
+    "A programação funcional pode ser extremamente poderosa e um dos pontos fortes da linguagem Python é que ela permite programar usando (i) o estilo de programação procedural (ou imperativa), (ii) o estilo orientado a objetos e (iii) o estilo funcional. São os programadores quem escolhem quais ferramentas selecionar, qual estilo e como misturá-los para resolver melhor um determinado problema.\n",
     "\n",
     "Neste capítulo, fornecemos alguns exemplos para o uso dos comandos listados acima.\n",
     "\n",
@@ -192,7 +192,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Isso funciona exatamente da mesma maneira, mas - como a função anônima não tem um nome - precisamos definir a função (através da expressão `lambda`) - toda vez que precisamos dela.\n",
+    "Isto funciona exatamente da mesma maneira, mas - como a função anônima não tem um nome - precisamos definir a função (através da expressão `lambda`) - toda vez que precisamos dela.\n",
     "\n",
     "Funções anônimas podem levar mais de um argumento:"
    ]
@@ -243,11 +243,10 @@
    "source": [
     "Veremos alguns exemplos usando `lambda` que esclarecerão os casos típicos de uso.\n",
     "\n",
-    "*Map*\n",
+    "`map`\n",
     "---\n",
     "\n",
-    "A função `lst2 = map(f, s)` aplica uma função `f` a todos os elementos em uma seqüência `s`.\n",
-    "O resultado do `map` pode ser convertido em uma lista com o mesmo comprimento que `s`:"
+    "A função `lst2 = map(f, s)` aplica uma função `f` a todos os elementos em uma seqüência `s`. O resultado de `map` pode ser convertido em uma lista com o mesmo comprimento que `s`:"
    ]
   },
   {
@@ -275,22 +274,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Banana', 'Maca', 'Laranja']"
+       "['Banana', 'Maçã', 'Laranja']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list(map(str.capitalize, ['banana', 'maca', 'laranja']))"
+    "list(map(str.capitalize, ['banana', 'maçã', 'laranja']))"
    ]
   },
   {
@@ -322,37 +321,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Banana', 'Maca', 'Laranja']"
+       "['Banana', 'Maçã', 'Laranja']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list(map(lambda s: s.capitalize(), ['banana', 'maca', 'laranja']))"
+    "list(map(lambda s: s.capitalize(), ['banana', 'maçã', 'laranja']))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Filter*\n",
+    "`filter`\n",
     "------\n",
     "\n",
-    "A função `lst2 = filter(f, lst)` aplica a função `f` a todos os elementos em uma sequencia `s`. A função `f` deve retornar `True` ou `False`. Isto faz com que uma lista contenha somente aqueles elementos *s*<sub>*i*</sub> da sequencia `s` para os quais `f`(*s*<sub>*i*</sub>) has returned `True`."
+    "A função `lst2 = filter(f, lst)` aplica a função `f` a todos os elementos em uma sequencia `s`. A função `f` deve retornar `True` ou `False`. Isto faz com que uma lista contenha somente aqueles elementos *s*<sub>*i*</sub> da sequencia `s` para os quais `f`(*s*<sub>*i*</sub>) tem valor de retorno `True`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +360,7 @@
        "[6, 7, 8, 9, 10]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +413,7 @@
        "['smith', 'bob']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,32 +428,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Compreensão de lista\n",
+    "Compreensões de lista\n",
     "------------------\n",
     "\n",
-    "Compreensões de lista fornecem uma maneira concisa de criar e modificar listas sem recorrer ao uso de `map()`, `filter()` e/ou `lambda`. A definição da lista resultante tende a ser mais clara do que as listas criadas usando essas construções. Cada compreensão de lista consiste em uma expressão seguida por uma cláusula `for`, então zero ou mais cláusulas ` for` ou `if`. O resultado será uma lista resultante da avaliação da expressão no contexto das cláusulas `for` e `if` que a seguem. Se a expressão fosse avaliada para uma tupla, ela deverá estar entre parênteses.\n",
+    "Compreensões de lista fornecem uma maneira concisa de criar e modificar listas sem recorrer ao uso de `map()`, `filter()` e/ou `lambda`. A definição da lista resultante tende a ser mais clara do que as listas criadas usando essas construções. Cada compreensão de lista consiste de uma expressão seguida por uma cláusula `for`, zero ou mais cláusulas ` for` ou `if`. O resultado será uma lista resultante da avaliação da expressão no contexto das cláusulas `for` e `if` que a seguem. Se a expressão for avaliada para uma tupla, ela deverá estar entre parênteses.\n",
     "\n",
     "Alguns exemplos tornarão isso mais claro:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['banana', 'framboesa', 'maracuja']"
+       "['banana', 'framboesa', 'maracujá']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "frutas_frescas = ['  banana', '  framboesa ', 'maracuja  ']\n",
+    "frutas_frescas = ['  banana', '  framboesa ', 'maracujá  ']\n",
     "[weapon.strip() for weapon in frutas_frescas]"
    ]
   },
@@ -543,7 +542,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Podemos também usar compreensões de lista para modificar a lista de inteiros retornada pelo comando `range`, de modo que nossos elementos subsequentes na lista aumente por frações não-inteiras. "
+    "Podemos também usar compreensões de lista para modificar a lista de inteiros retornada pelo comando `range`, de modo que nossos elementos subsequentes na lista aumentem por frações não-inteiras. "
    ]
   },
   {
@@ -570,7 +569,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Vamos agora revisitar os exemplos da seção sobre `filter`."
+    "Vamos agora revisitar os exemplos da seção `filter`."
    ]
   },
   {
@@ -595,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +603,7 @@
        "['smith', 'bob']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -643,22 +642,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Banana', 'Maca', 'Laranja']"
+       "['Banana', 'Maçã', 'Laranja']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[fruta.capitalize() for fruta in ['banana', 'maca', 'laranja'] ]"
+    "[fruta.capitalize() for fruta in ['banana', 'maçã', 'laranja'] ]"
    ]
   },
   {
@@ -676,7 +675,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Reduce\n",
+    "`reduce`\n",
     "------\n",
     "\n",
     "A função `reduce` assume uma função binária `f(x, y)`, uma sequência `s` e um valor de início `a0`. Em seguida, aplica a função `f` ao valor de início` a0` e o primeiro elemento na seqüência: `a1 = f(a, s[0])`. O segundo elemento (`s [1]`) da sequência é processado da seguinte forma: a função `f` é chamada com argumentos `a1` e `s[1]`, ou seja, `a2 = f (a1, s[1])`. Desta forma, toda a sequência é processada. `reduce` retorna um único número.\n",
@@ -686,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -697,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -706,7 +705,7 @@
        "55"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -720,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +728,7 @@
        "155"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -742,12 +741,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Podemos modificar a função `add` para fornecer alguma detalhe a mais sobre o processo:"
+    "Podemos modificar a função `add` para fornecer algum detalhe a mais sobre o processo:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +771,7 @@
        "55"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -794,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -803,7 +802,7 @@
        "13"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -812,7 +811,7 @@
     "def add_len(n,s):\n",
     "    return n+len(s)\n",
     "\n",
-    "reduce(add_len, [\"Este\",\"e\",\"um\",\"teste.\"],0)"
+    "reduce(add_len, [\"Este\",\"é\",\"um\",\"teste.\"],0)"
    ]
   },
   {
@@ -824,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -832,7 +831,7 @@
      "output_type": "stream",
      "text": [
       "add_len(n=0, s=Este) -> 4\n",
-      "add_len(n=4, s=e) -> 5\n",
+      "add_len(n=4, s=é) -> 5\n",
       "add_len(n=5, s=um) -> 7\n",
       "add_len(n=7, s=teste.) -> 13\n"
      ]
@@ -843,7 +842,7 @@
        "13"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -853,7 +852,7 @@
     "    print(\"add_len(n=%d, s=%s) -> %d\" % (n, s, n+len(s)))\n",
     "    return n+len(s)\n",
     "\n",
-    "reduce(add_len_verbose, [\"Este\",\"e\",\"um\",\"teste.\"],0)"
+    "reduce(add_len_verbose, [\"Este\",\"é\",\"um\",\"teste.\"],0)"
    ]
   },
   {
@@ -1062,7 +1061,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As versões que utilizam compreensão de lista e `map` encaixam-se em uma linha de código, enquanto um laço `for` precisa de 3. Este exemplo mostra que o código funcional resulta em expressões *concisas*. Normalmente, o número de erros que um programador comete é por linha de código escrita, de modo que quanto menos linhas de código tivermos, menos *bugs* teremos de encontrar.\n",
+    "As versões que utilizam compreensão de lista e `map` encaixam-se em uma linha de código, enquanto um laço `for` precisa de três linhas. Este exemplo mostra que o código funcional resulta em expressões *concisas*. Normalmente, o número de erros que um programador comete é por linha de código escrita, de modo que quanto menos linhas de código tivermos, menos *bugs* teremos de encontrar.\n",
     "\n",
     "Muitas vezes, os programadores descobrem que, inicialmente, as ferramentas de processamento de lista apresentadas neste capítulo parecem menos intuitivas do que o uso de laços `for` para processar cada elemento em uma lista individualmente, mas isso - ao longo do tempo - tende a ser valorizado por eles como um estilo de programação mais funcional.\n",
     "\n",
@@ -1079,31 +1078,31 @@
     "\n",
     "- Método 3: usando compreensão de lista\n",
     "\n",
-    "- Método 4: usando `numpy`. (`numpy` é coberto no [Capítulo 14](14-numpy.ipynb))\n",
+    "- Método 4: usando `numpy`. (`numpy` é coberto no [Capítulo 14](14-python-numerico-numpy.ipynb))\n",
     "\n",
     "O programa produz a seguinte saída:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "N = 10000000\n",
-      "for-loop1 3.866727828979492\n",
-      "for-loop2 3.23616099357605\n",
-      "listcomp 2.574462890625\n",
-      "numpy 0.1014089584350586\n",
-      "O metodo mais lento eh 38.1 vezes mais lento do que o metodo mais rapido.\n"
+      "('N =', 10000000)\n",
+      "('for-loop1', 5.317609071731567)\n",
+      "('for-loop2', 4.719789981842041)\n",
+      "('listcomp', 3.4225449562072754)\n",
+      "('numpy', 0.04654884338378906)\n",
+      "O metodo mais lento eh 114.2 vezes mais lento do que o metodo mais rapido.\n"
      ]
     }
    ],
    "source": [
-    "!python modules/rapidez_compreensao_lista.py"
+    "!python static/data/rapidez_compreensao_lista.py"
    ]
   },
   {
@@ -1124,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1210,17 +1209,8 @@
     }
    ],
    "source": [
-    "!cat modules/rapidez_compreensao_lista.py"
+    "!cat static/data/rapidez_compreensao_lista.py"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
