Submitting reviewed version of notebook 10.

--- a/10-matlab-para-python.ipynb
+++ b/10-matlab-para-python.ipynb
@@ -71,13 +71,13 @@
     "\n",
     "```octave\n",
     "if a==0\n",
-    "    disp('a eh zero')\n",
+    "    disp('a é zero')\n",
     "elseif a<0\n",
-    "    disp('a eh negativo')\n",
+    "    disp('a é negativo')\n",
     "elseif a==42\n",
-    "    disp('a eh 42')\n",
+    "    disp('a é 42')\n",
     "else\n",
-    "    disp('a eh positivo')\n",
+    "    disp('a é positivo')\n",
     "end\n",
     "```"
    ]
@@ -100,7 +100,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a eh negativo\n"
+      "a é negativo\n"
      ]
     }
    ],
@@ -108,13 +108,13 @@
     "a = -5\n",
     "\n",
     "if a==0:\n",
-    "    print('a eh zero')\n",
+    "    print('a é zero')\n",
     "elif a<0:\n",
-    "    print('a eh negativo')\n",
+    "    print('a é negativo')\n",
     "elif a==42:\n",
-    "    print('a eh 42')\n",
+    "    print('a é 42')\n",
     "else:\n",
-    "    print('a eh positivo')"
+    "    print('a é positivo')"
    ]
   },
   {
@@ -129,9 +129,9 @@
     "\n",
     "### Matrizes\n",
     "\n",
-    "Em Matlab, todo objeto é uma matriz. Em Python, há uma biblioteca especializada chamada `numpy` que fornece o objeto `array`, o qual, por sua vez, possui todas as funcionalidades correspondentes. Similarmente ao Matlab, o objeto `numpy` é baseado em bibliotecas cuja execução é bastante rápida.\n",
+    "Em Matlab, todo objeto é uma matriz. Em Python, há uma biblioteca especializada chamada NumPy que fornece o objeto `array`, o qual, por sua vez, possui todas as funcionalidades correspondentes. Similarmente ao Matlab, o NumPy é baseado em bibliotecas cuja execução é bastante rápida. \n",
     "\n",
-    "Há um documento introdutório dedicado ao Numpy para usuários do Matlab disponível em <https://docs.scipy.org/doc/numpy-dev/user/numpy-for-matlab-users.html>."
+    "Há um documento introdutório dedicado ao NumPy para usuários do Matlab disponível em <https://docs.scipy.org/doc/numpy-dev/user/numpy-for-matlab-users.html>."
    ]
   }
  ],
