Submitting reviewed version of notebook 13.

--- a/13-computacao-numerica.ipynb
+++ b/13-computacao-numerica.ipynb
@@ -10,13 +10,13 @@
     "Números e números\n",
     "-------------------\n",
     "\n",
-    "Já vimos que o Python reconhece diferentes *tipos* de números (veja [Capítulo 3](03-estrutura-dados.ipynb)):\n",
+    "Já vimos que o Python reconhece diferentes *tipos* de números (veja [Capítulo 3](03-tipos-estruturas-dados.ipynb)):\n",
     "\n",
-    "- números em ponto flutuante, como 3.14\n",
+    "- números em ponto flutuante (`float`), como 3.14\n",
     "\n",
-    "- `int`eiros como 42\n",
+    "- inteiros (`int`) como 42\n",
     "\n",
-    "- números \"complexos\", como 3.14 + 1*j\n",
+    "- números complexos (`complex`), como 3.14 + 1*j\n",
     "\n",
     "### Limitações dos tipos de números\n",
     "\n",
@@ -24,9 +24,9 @@
     "\n",
     "A matemática fornece o conjunto infinito dos números naturais $ \\mathbb{ℕ} = \\{1, 2, 3,\\dots \\} $. Como o computador opera de modo *finito*, é impossível que ele represente todos esses números. Em vez disso, apenas um pequeno subconjunto de números é representado.\n",
     "\n",
-    "O tipo `int` (geralmente [3]) representa números entre -2147483648 e +2147483647, e corresponde a 4 bytes (isto é 4\\* 8 bits e 2<sup>32</sup> = 4294967296, que é o intervalo de -2147483648 a +2147483647).\n",
+    "O tipo `int` (geralmente [3]) representa números entre -2147483648 e +2147483647, e corresponde a 4 *bytes* (isto é 4\\*8 *bits* e 2<sup>32</sup> = 4294967296, que é o intervalo de -2147483648 a +2147483647).\n",
     "\n",
-    "Você pode imaginar que o hardware usa uma tabela como essa para codificar inteiros usando bits (suponha, por simplicidade, que usamos apenas 8 bits para isto):\n",
+    "Você pode imaginar que o hardware usa uma tabela como esta para codificar inteiros usando bits (suponha, por simplicidade, que usemos apenas 8 *bits*):\n",
     "\n",
     "| número natural |representação binária|\n",
     "|---------------:|-------------------:|\n",
@@ -40,50 +40,49 @@
     "|             254|            11111110|\n",
     "|             255|            11111111|\n",
     "\n",
-    "Usando 8 bits, podemos representar 256 números naturais (por exemplo, de 0 a 255), pois temos 2<sup>8</sup> = 256 formas diferentes de combinar oito 0s e 1s.\n",
+    "Usando 8 *bits*, podemos representar 256 números naturais (por exemplo, de 0 a 255), pois temos 2<sup>8</sup> = 256 formas diferentes de combinar oito 0s e 1s.\n",
     "\n",
     "Poderíamos também usar uma tabela ligeiramente diferente para descrever 256 números inteiros que variem, por exemplo, de -127 a +128.\n",
     "\n",
-    "Assim é, *em princípio*, como os números inteiros são representados no computador. Dependendo do número de bytes utilizados, apenas números inteiros entre um valor mínimo e um máximo podem ser representados. Nos hardwares de hoje, é comum usar 4 ou 8 bytes para representar um número inteiro, o que leva exatamente aos valores mínimo e máximo de -2147483648 e +2147483647, como mostrado acima para 4 bytes, e +9223372036854775807 como o inteiro máximo para 8 bytes (isto é ≈ 9.2⋅10<sup>18</sup>).\n",
+    "Assim é, *em princípio*, como os números inteiros são representados no computador. Dependendo do número de *bytes* utilizados, apenas números inteiros entre um valor mínimo e um máximo podem ser representados. Nos hardwares de hoje, é comum usar 4 ou 8 *bytes* para representar um número inteiro, o que leva exatamente aos valores mínimo e máximo de -2147483648 e +2147483647, como mostrado acima para 4 *bytes*, e +9223372036854775807 como o inteiro máximo para 8 *bytes* (isto é ≈ 9.2⋅10<sup>18</sup>).\n",
     "\n",
     "#### Limitações de `float`s\n",
     "\n",
-    "Os números em ponto flutuante em um computador não são os mesmos que os números em ponto flutuante da matemática. (Isto é exatamente o mesmo que os números inteiros (matemáticos) não sendo os mesmos em um computador: apenas um *subconjunto* do conjunto infinito dos números inteiros pode ser representado pelo tipo `int`, como mostrado anteriormente). Então, como os números em ponto flutuante são representados no computador?\n",
+    "Os números em ponto flutuante em um computador não são os mesmos que os números em ponto flutuante da matemática. (Isto é exatamente o mesmo que dize que os números inteiros (matemáticos) não são os mesmos em um computador: apenas um *subconjunto* do conjunto infinito dos números inteiros pode ser representado pelo tipo `int`, como mostrado anteriormente). Então, como os números em ponto flutuante são representados no computador?\n",
     "\n",
-    "- Qualquer número real *x* pode ser escrito como\n",
-    "     *x* = *a* ⋅ 10<sup>*b*</sup>\n",
-    "      Onde *a* é a mantissa e *b* o expoente.\n",
+    "- Qualquer número real $ x $ pode ser escrito como\n",
+    "     $$ x  = a \\cdot 10^b, $$\n",
+    "\n",
+    "onde $ a $ é a mantissa e $ b $ o expoente.\n",
     "      \n",
     "- Exemplos: \n",
     "\n",
-    "| x                                 | a       | b  |\n",
+    "| $x$                               | $a$     | $b$|\n",
     "|-----------------------------------|---------|----|\n",
     "| 123.45 = 1.23456 ⋅ 10<sup>2</sup> | 1.23456 |  2 |\n",
     "| 1000000 = 1.0 ⋅ 10<sup>6</sup>    | 1.00000 |  6 |\n",
     "| 0.0000024 = 2.4 ⋅ 10<sup>-6</sup> | 2.40000 | -6 |\n",
     "\n",
-    "- Portanto, podemos usar 2 inteiros para codificar um número em ponto flutuante!\n",
-    "\n",
-    "    *x* = *a*⋅10<sup>*b*</sup>\n"
+    "- Portanto, podemos usar 2 inteiros para codificar um número em ponto flutuante!"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Seguindo (aproximadamente) o padrão IEEE-754, usa-se 8 bytes para um `float` *x*: estes 64 bits são divididos entre\n",
+    "- Seguindo (aproximadamente) o padrão IEEE-754, usa-se 8 *bytes* para um `float` $ x $: estes 64 bits são divididos entre\n",
     "\n",
-    "     - 10 bits para o expoente *b* e\n",
+    "     - 10 bits para o expoente $ b $ e\n",
     "\n",
-    "     - 54 bits para a mantissa *a*.\n",
+    "     - 54 bits para a mantissa $ a $.\n",
     "\n",
     "Isto resulta em\n",
     "\n",
     "- maior número em ponto flutuante possível ≈ 10 <sup>308</sup> (medida de qualidade para *b*)\n",
     "\n",
-    "- menor número em ponto flutuante possível (positivo) ≈ 10 <sup>-308</sup> (medida de qualidade para *b*)\n",
+    "- menor número em ponto flutuante possível (positivo) ≈ 10 <sup>-308</sup> (medida de qualidade para $ b $)\n",
     "\n",
-    "- distância entre 1.0 e o número imediatamente superior ≈ 10<sup>-16</sup> (medida de qualidade para * a *)\n",
+    "- distância entre 1.0 e o número imediatamente superior ≈ 10<sup>-16</sup> (medida de qualidade para $ a $)\n",
     "\n",
     "Observe que, *a priori*, é assim como os números em ponto flutuante são armazenados (na realidade, é um pouco mais complicado).\n"
    ]
@@ -100,19 +99,17 @@
     "\n",
     "Na prática cotidiana, geralmente não encontramos números que excedam 10<sup>300</sup> (este é um número com 300 zeros!). Portanto, os números em ponto flutuante cobrem o intervalo de números de que geralmente precisamos.\n",
     "\n",
-    "No entanto, você precisa estar cientes de que, em computação científica, números pequenos e grandes são usados, os quais podem (geralmente em resultados intermédios) exceder o intervalo de números em ponto flutuante.\n",
+    "No entanto, você precisa estar ciente de que, em computação científica, números pequenos e grandes são usados, os quais podem (geralmente em resultados intermediários) exceder o intervalo de números em ponto flutuante.\n",
     "\n",
     "- Imagine, por exemplo, que tenhamos de calcular a quarta potência da constante ℏ = 1.0545716 ⋅ 10 <sup>-34</sup> *kg. m<sup>2</sup>/s*: \n",
     "\n",
     "- ℏ <sup>4</sup> = 1.2368136958909421 ⋅ 10 <sup>-136</sup> *kg<sup>4</sup>.m<sup>8</sup>/s<sup>4</sup>*, que está a \"meio caminho\" de nosso menor `float` positivo representável da ordem de 10<sup>-308</sup>.\n",
     "\n",
-    "Se houver algum perigo de que possamos exceder os limites dos números em ponto flutuante, teremos que *escalonar* nossas equações de modo que (idealmente) todos os números sejam da ordem de um. Escalonar nossas equações para que todos os números relevantes sejam próximos de 1 (normalização) também é útil para a depuração de código: se números muito maiores ou menores do que 1 surgirem, isso pode ser uma indicação de erro.\n",
+    "Se houver algum perigo de que possamos exceder os limites dos números em ponto flutuante, teremos que *escalonar* nossas equações de modo que (idealmente) todos os números sejam da ordem de 1. Escalonar nossas equações para que todos os números relevantes sejam próximos de 1 (normalização) também é útil para a depuração de código: se números muito maiores ou menores do que 1 surgirem, isso pode ser uma indicação de erro.\n",
     "\n",
     "### Usando números de ponto flutuante (sem o devido cuidado)\n",
     "\n",
-    "Já sabemos que precisamos ter cuidado para que nossos valores em ponto flutuante não excedam os limites dos números em ponto flutuante que podem ser representados no computador.\n",
-    "\n",
-    "Há outra complicação devido à forma como os números em ponto flutuante têm de ser representados internamente: nem todos eles podem ser representados exatamente no computador. O número 1.0 pode ser representado exatamente, mas os números 0.1, 0.2 e 0.3 não:"
+    "Já sabemos que precisamos ter cuidado para que nossos valores em ponto flutuante não excedam os limites que podem ser representados no computador (*underflow* e *overflow*). Há outra complicação devido à forma como os números em ponto flutuante têm de ser representados internamente: nem todos eles podem ser representados exatamente no computador. O número 1.0 pode ser representado exatamente, mas os números 0.1, 0.2 e 0.3 não:"
    ]
   },
   {
@@ -347,7 +344,7 @@
    "source": [
     "### Cálculo simbólico\n",
     "\n",
-    "Usando o pacote Sympy, temos precisão arbitrária. Usando <span>`sympy.Rational`</span>, podemos definir a fração 1/10 exatamente com o cálculo simbólico. Adicionando a fração 10 vezes, seremos levados exatamente ao valor 1, conforme demonstrado por este script"
+    "Usando o pacote SymPy, temos precisão arbitrária. Usando `sympy.Rational`, podemos definir a fração 1/10 exatamente com o cálculo simbólico. Adicionando a fração 10 vezes, seremos levados exatamente ao valor 1, conforme demonstrado por este script:"
    ]
   },
   {
@@ -444,13 +441,13 @@
     "    return tempo_final - tempo_inicial\n",
     "\n",
     "n = 100000\n",
-    "print(\"laco usando float dx:\")\n",
+    "print(\"laço usando float dx:\")\n",
     "tempo_float = medir_tempo(loop_float, n)\n",
-    "print(\"laco float n=%d leva %6.5f segundos\" % (n, tempo_float))\n",
-    "print(\"laco usando sympy simbolico dx:\")\n",
+    "print(\"laço float n=%d leva %6.5f segundos\" % (n, tempo_float))\n",
+    "print(\"laço usando sympy simbólico dx:\")\n",
     "tempo_sympy = medir_tempo(loop_sympy, n)\n",
-    "print(\"laco sympy n =% d leva %6.5f segundos\" % (n , tempo_sympy ))\n",
-    "print(\"laco simbolico eh um fator %.1f mais lento.\" % ( tempo_sympy / tempo_float ))"
+    "print(\"laço sympy n =% d leva %6.5f segundos\" % (n , tempo_sympy ))\n",
+    "print(\"laço simbólico é um fator %.1f mais lento.\" % ( tempo_sympy / tempo_float ))"
    ]
   },
   {
